--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <h1>
                       DevOps By <br>
                       <span>
-                        Your Reyaz
+                        Your ANURAG
                       </span>
                     </h1>
                     <p>
